Changed base code to fix a bug (didn't show logs and other errors) Added Module for colissiones Started working on a JSON parser Aded an Excel file to store temporary the sizes of frames of the characters

--- a/Final Fight.vcxproj.filters
+++ b/Final Fight.vcxproj.filters
@@ -52,7 +52,19 @@
     <ClInclude Include="ModuleInput.h">
       <Filter>Core Modules</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleSceneLevel.h">
+    <ClInclude Include="MemLeaks.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleParticles.h">
+      <Filter>Core Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleCollision.h">
+      <Filter>Core Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleSceneIntro.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleSceneLevel1.h">
       <Filter>Game Modules</Filter>
     </ClInclude>
   </ItemGroup>
@@ -87,7 +99,16 @@
     <ClCompile Include="ModuleInput.cpp">
       <Filter>Core Modules</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleSceneLevel.cpp">
+    <ClCompile Include="ModuleParticles.cpp">
+      <Filter>Core Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleCollision.cpp">
+      <Filter>Core Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleSceneIntro.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleSceneLevel1.cpp">
       <Filter>Game Modules</Filter>
     </ClCompile>
   </ItemGroup>
