--- a/Final Fight.vcxproj.filters
+++ b/Final Fight.vcxproj.filters
@@ -67,7 +67,9 @@
     <ClInclude Include="ModuleSceneLevel1.h">
       <Filter>Game Modules</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleSceneSelection.h" />
+    <ClInclude Include="ModuleSceneSelection.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -113,7 +115,7 @@
       <Filter>Game Modules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleSceneSelection.cpp">
-      <Filter>Main</Filter>
+      <Filter>Game Modules</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
