--- a/Final Fight.vcxproj.filters
+++ b/Final Fight.vcxproj.filters
@@ -67,6 +67,9 @@
     <ClInclude Include="ModuleSceneSelection.h">
       <Filter>Game Modules</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleEnemy.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -109,6 +112,9 @@
       <Filter>Game Modules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleSceneSelection.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleEnemy.cpp">
       <Filter>Game Modules</Filter>
     </ClCompile>
   </ItemGroup>
